# mcp-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: auth.rs  config.rs  coordination.rs  lib.rs  proxy_handler.rs  sse_client.rs  sse_server.rs  streamable_http_client.rs  streamable_http_server.rs  utils.rs
