[package]
name = "rmcp-proxy"
version = "0.1.2"
edition = "2021"
description = "A Rust bidirectional MCP proxy between stdio and SSE"
authors = ["Stephen Lacy"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "mcp-proxy"
path = "src/bin/mcp-proxy.rs"

[dependencies]
rmcp = { version = "0.1.5", features = [
  "server",
  "client",
  "transport-sse-server",
  "transport-sse",
  "transport-child-process",
  "transport-io",
] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7" }
tokio-stream = "0.1"

axum = "0.8"
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.0"

clap = { version = "4", features = ["derive", "env"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
url = "2.4"
reqwest = { version = "0.12", features = ["json"] }
parking_lot = "0.12"
